<resources>
    <string name="app_name">RGB App</string>
    <string name="create_an_rgb_color">Create an RGB Color</string>
    <string name="brief_description">Add two hexadecimal characters between 0–9, A-F or a-f without the "#" for each channel</string>
    <string name="red_channel">Red Channel</string>
    <string name="green_channel">Green Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="create_rgb_button">Create RGB Color</string>
    <string name="created_color_display">Created color display panel</string>
    <string name="please_input_correctly">Please input correctly</string>
</resources>