<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_display"
        android:layout_width="match_parent"
        style="@style/title_style"
        android:text="@string/create_an_rgb_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/description_display"
        android:layout_width="match_parent"
        style="@style/description_style"
        android:text="@string/brief_description"
        app:layout_constraintTop_toBottomOf="@+id/title_display"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        style="@style/text_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/red_channel"
        android:textColorHint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/description_display"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/red_channel" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        style="@style/text_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/green_channel"
        android:textColorHint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/red_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/green_channel" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        style="@style/text_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel"
        android:textColorHint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/green_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/blue_channel" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>